# vibeSentinel

./: .gitignore  Cargo.toml  README.md  agents.md  build-firmware.sh  design.md  index.html  spec_landing_page.md  vibesentinel_context.md
.github/workflows/: deploy.yml
assets/: index-CCDZO8mq.js  index-cXQCWHZE.css
crates/vibesentinel-features/: Cargo.toml
crates/vibesentinel-features/src/: extractor.rs  fft.rs  lib.rs  stats.rs  window.rs
crates/vibesentinel-firmware/: Cargo.toml  partitions.csv  sdkconfig.defaults
crates/vibesentinel-firmware/src/: alert.rs  config.rs  debug.rs  imu.rs  main.rs
crates/vibesentinel-model/: Cargo.toml
crates/vibesentinel-model/src/: activations.rs  arch.rs  lib.rs  matmul.rs  weights.rs
crates/vibesentinel-trainer/: Cargo.toml
crates/vibesentinel-trainer/src/: dataset.rs  export.rs  main.rs  model.rs  train.rs
data/: anomaly_vibration.csv
docs/: architecture.md  current-state-future-implementation.md  getting-started.md  hackathon-pitch.md  intern-guide.md  overview.md
landing/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
landing/src/: main.ts  style.css
landing/src/components/: tabs.ts
landing/src/lib/: animate.ts  particles.ts
scripts/: bootstrap.sh  build.sh
