[package]
name = "vibesentinel-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
vibesentinel-features = { path = "../vibesentinel-features", features = ["std"] }
vibesentinel-model    = { path = "../vibesentinel-model", features = ["std"] }

burn = { version = "0.14", features = ["train", "wgpu"] }
burn-ndarray = "0.14"

csv = "1.3"
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rand = "0.8"
clap = "4.6.1"
